--- a/鉴权及上报方法.md
+++ b/鉴权及上报方法.md
@@ -60,7 +60,7 @@ SecretId : adbde0a78148b2058e611230713b406b
 SecretKey: fBQp8GRZWmTH0wnbsoPpa3LcecXTzjmd
 ```
 
-下面以接口查询资源列表( ReportCustomers )作为示例，分步骤介绍签名的计算过程。
+下面以接口机构上报客资数据( CorpReport )作为示例，分步骤介绍签名的计算过程。
 
 1) 拼接签名内容( SigningStr )
 
@@ -92,7 +92,7 @@ hmac id="adbde0a78148b2058e611230713b406b", algorithm="hmac-sha1", headers="date
 4) 最终完整的调用信息如下：
 
 ```json
-https://service-g4q1tirw-1256289435.gz.apigw.tencentcs.com:443/CorpCustomerReport
+https://service-g4q1tirw-1256289435.gz.apigw.tencentcs.com:443/CorpReport
 
 Authorization: hmac id="adbde0a78148b2058e611230713b406b", algorithm="hmac-sha1", headers="x-date source", signature="JK1nNxFZEtKencF1rjSBI1mWJqbNRTXfHB1q3i/FAWU="
 X-Date: Tue, 10 Nov 2020 03:27:42 GMT
@@ -168,8 +168,8 @@ func calcAuthorization(source string, secretId string, secretKey string) (sign s
 
 
 func TestAPI(t *testing.T) {
-	SecretId := "adbde0a78148b2058e611230713b406b"                              // 密钥对的 SecretId
-	SecretKey := "fBQp8GRZWmTH0wnbsoPpa3LcecXTzjmd" // 密钥对的 SecretKey
+	SecretId := "秘钥ID"                              // 密钥对的 SecretId
+	SecretKey := "秘钥Key" // 密钥对的 SecretKey
 	source := "mp_report"                                   // 签名水印值，可填写任意值
 	sign, dateTime, err := calcAuthorization(source, SecretId, SecretKey)
 	if err != nil {
@@ -177,7 +177,7 @@ func TestAPI(t *testing.T) {
 
 	}
 	defaultDomain := "service-g4q1tirw-11235813.gz.apigw.tencentcs.com"                      // 用户 API 所在服务的域名
-	reqUrl := "https://service-g4q1tirw-11235813.gz.apigw.tencentcs.com:443/CorpCustomerReport" // 用户 API 的访问路径
+	reqUrl := "https://service-g4q1tirw-11235813.gz.apigw.tencentcs.com:443/CorpReport" // 用户 API 的访问路径
 	client := &http.Client{
 		Timeout: 7 * time.Second, //set timeout
 	}
