--- a/鉴权及上报方法.md
+++ b/鉴权及上报方法.md
@@ -1,3 +1,5 @@
+概述：面向在腾讯云企业推上投放自主小程序的客户，提供小程序线索数据回传接口。
+
 ### 1. 接口鉴权
 
 API 会对每个访问请求进行身份验证，即每个请求都需要在header中包含签名信息（ Authorization ）以验证请求者身份。
@@ -226,3 +228,41 @@ func TestAPI(t *testing.T) {
 }
 
 ```
+
+### 3. 文档字段说明补充
+单条线索数据上报内容：
+
+| 参数名称 | 必选 | 类型   | 描述                                                 |
+| -------- | ---- | ------ | ---------------------------------------------------- |
+| MPID | 是 | String | 小程序ID |
+| MPPath |是|   String  |  小程序路径     |
+| ClickID |否| string  | ClickID |
+| PageType |是| int32  | 落地页类型,1:线索,2:领券 |
+| CouponAmount |否|   int32  | 购券金额     |
+| CouponDetail |否|   []String  | 优惠券信息     |
+| SourceType |否| int32 | 线索获取方式，1:表单预约,2:一键授权 |
+| Name |否| String  | 姓名 |
+| Gender |否|   int32  | 性别,1:男，2：女     |
+| Mobile |否|   String  | 手机号码     |
+| IDNumber|否 | String  | 身份证号 |
+| QQ|否 | String  | QQ |
+| Wechat |否|   String  | 微信号     |
+| Email |否| String  | 邮箱 |
+| Address|否|   String  | 所在地(省市)     |
+| ExtraData |否| String  | 自定义数据(json字符串) |
+| CreateTime |否|   int64  |  线索创建时间     |
+
+附录：
+
+1. ClickID 说明如下
+
+clikc id 定义：对于推广Web落地页而言，在腾讯广告推广时，每次点击都会生成一个 click_id，在跳转到落地页时，会将 click_id 作为参数传入对应的 URL 中。对于腾讯广告非微信流量为URL中的参数qz_gdt的值，对于微信流量为URL中的参数gdt_vid的值。
+
+创建广告填写的小程序路径：
+/page/item/detail/detail?sku=1077777&platform=1
+
+小程序路径加广告参数后示例地址：
+/page/item/detail/detail?sku=1077777&platform=1&gdt_vid=wx0ewinbalytpt ma00&weixinadinfo=20966864.wx0ewinbalytptma00.0.1
+
+
+请求小程序参数接口地址：https://developers.weixin.qq.com/miniprogram/dev/reference/api/Page.html#onLoad-Object-query
