--- a/鉴权及上报方法.md
+++ b/鉴权及上报方法.md
@@ -100,7 +100,30 @@ Authorization: hmac id="adbde0a78148b2058e611230713b406b", algorithm="hmac-sha1"
 X-Date: Tue, 10 Nov 2020 03:27:42 GMT
 ```
 
-### 2. 签名及接口调用演示
+### 2. 回传内容
+单条线索数据上报内容：
+
+| 参数名称 | 必选 | 类型   | 描述                                                 |
+| -------- | ---- | ------ | ---------------------------------------------------- |
+| MPID | 是 | String | 小程序ID |
+| MPPath |是|   String  |  小程序路径     |
+| ClickID |否| string  | 小程序页面路径参数，详情获取方式见附录。 |
+| PageType |是| int32  | 落地页类型,1:线索,2:领券 |
+| CouponAmount |否|   int32  | 购券金额，代表购券所花金额，单位为分，需例如花 9.9 元购得 100 元抵用券，则填入 990     |
+| CouponDetail |否|   []String  | 优惠券信息，比如如果是 XX 元抵扣 XX 元则:购券费用，券类型（优惠券/折扣券/礼品券/代金券/团购券/其他自定义），抵扣金额 / 券面内容，若有多张，则放多张如："order_detail":["990_抵扣券_10000","1990_抵扣券_20000","990_礼品券_无门槛兑冰粉一碗"]     |
+| SourceType |否| int32 | 线索获取方式，1:表单预约,2:一键授权 |
+| Name |否| String  | 姓名 |
+| Gender |否|   int32  | 性别,1:男，2：女     |
+| Mobile |否|   String  | 手机号码     |
+| IDNumber|否 | String  | 身份证号 |
+| QQ|否 | String  | QQ |
+| Wechat |否|   String  | 微信号     |
+| Email |否| String  | 邮箱 |
+| Address|否|   String  | 所在地(省市)     |
+| ExtraData |否| String  | 自定义数据(json字符串) |
+| CreateTime |否|   int64  |  线索创建时间     |
+
+### 3. 签名及接口调用演示
 
 更多语言可参考[这里](https://cloud.tencent.com/document/product/628/42183)
 
@@ -229,40 +252,18 @@ func TestAPI(t *testing.T) {
 
 ```
 
-### 3. 文档字段说明补充
-单条线索数据上报内容：
+### 附录：
 
-| 参数名称 | 必选 | 类型   | 描述                                                 |
-| -------- | ---- | ------ | ---------------------------------------------------- |
-| MPID | 是 | String | 小程序ID |
-| MPPath |是|   String  |  小程序路径     |
-| ClickID |否| string  | ClickID |
-| PageType |是| int32  | 落地页类型,1:线索,2:领券 |
-| CouponAmount |否|   int32  | 购券金额     |
-| CouponDetail |否|   []String  | 优惠券信息     |
-| SourceType |否| int32 | 线索获取方式，1:表单预约,2:一键授权 |
-| Name |否| String  | 姓名 |
-| Gender |否|   int32  | 性别,1:男，2：女     |
-| Mobile |否|   String  | 手机号码     |
-| IDNumber|否 | String  | 身份证号 |
-| QQ|否 | String  | QQ |
-| Wechat |否|   String  | 微信号     |
-| Email |否| String  | 邮箱 |
-| Address|否|   String  | 所在地(省市)     |
-| ExtraData |否| String  | 自定义数据(json字符串) |
-| CreateTime |否|   int64  |  线索创建时间     |
+#### ClickID 说明如下
 
-附录：
+1）clikc id 定义：
+对于推广Web落地页而言，在腾讯广告推广时，每次点击都会生成一个 click_id，在跳转到落地页时，会将 click_id 作为参数传入对应的 URL 中。对于腾讯广告非微信流量为URL中的参数qz_gdt的值，对于微信流量为URL中的参数gdt_vid的值。
 
-1. ClickID 说明如下
-
-clikc id 定义：对于推广Web落地页而言，在腾讯广告推广时，每次点击都会生成一个 click_id，在跳转到落地页时，会将 click_id 作为参数传入对应的 URL 中。对于腾讯广告非微信流量为URL中的参数qz_gdt的值，对于微信流量为URL中的参数gdt_vid的值。
-
-创建广告填写的小程序路径：
+2）创建广告填写的小程序路径：
 /page/item/detail/detail?sku=1077777&platform=1
 
-小程序路径加广告参数后示例地址：
+3）小程序路径加广告参数后示例地址：
 /page/item/detail/detail?sku=1077777&platform=1&gdt_vid=wx0ewinbalytpt ma00&weixinadinfo=20966864.wx0ewinbalytptma00.0.1
 
 
-请求小程序参数接口地址：https://developers.weixin.qq.com/miniprogram/dev/reference/api/Page.html#onLoad-Object-query
+4）请求小程序参数接口地址：https://developers.weixin.qq.com/miniprogram/dev/reference/api/Page.html#onLoad-Object-query
