--- a/鉴权及上报方法.md
+++ b/鉴权及上报方法.md
@@ -107,7 +107,7 @@ X-Date: Tue, 10 Nov 2020 03:27:42 GMT
 | -------- | ---- | ------ | ---------------------------------------------------- |
 | MPID | 是 | String | 小程序ID |
 | MPPath |是|   String  |  小程序路径     |
-| ClickID |否| string  | 小程序页面路径参数，详情获取方式见附录。 |
+| ClickID |否| string  | 小程序页面路径参数，详情获取方式见[附录](###附录)。 |
 | PageType |是| int32  | 落地页类型,1:线索,2:领券 |
 | CouponAmount |否|   int32  | 购券金额，代表购券所花金额，单位为分，需例如花 9.9 元购得 100 元抵用券，则填入 990     |
 | CouponDetail |否|   []String  | 优惠券信息，比如如果是 XX 元抵扣 XX 元则:购券费用，券类型（优惠券/折扣券/礼品券/代金券/团购券/其他自定义），抵扣金额 / 券面内容，若有多张，则放多张如："order_detail":["990_抵扣券_10000","1990_抵扣券_20000","990_礼品券_无门槛兑冰粉一碗"]     |
@@ -257,13 +257,17 @@ func TestAPI(t *testing.T) {
 #### ClickID 说明如下
 
 1）clikc id 定义：
+
 对于推广Web落地页而言，在腾讯广告推广时，每次点击都会生成一个 click_id，在跳转到落地页时，会将 click_id 作为参数传入对应的 URL 中。对于腾讯广告非微信流量为URL中的参数qz_gdt的值，对于微信流量为URL中的参数gdt_vid的值。
 
 2）创建广告填写的小程序路径：
+
 /page/item/detail/detail?sku=1077777&platform=1
 
 3）小程序路径加广告参数后示例地址：
+
 /page/item/detail/detail?sku=1077777&platform=1&gdt_vid=wx0ewinbalytpt ma00&weixinadinfo=20966864.wx0ewinbalytptma00.0.1
 
 
-4）请求小程序参数接口地址：https://developers.weixin.qq.com/miniprogram/dev/reference/api/Page.html#onLoad-Object-query
+4）请求小程序参数接口地址：
+https://developers.weixin.qq.com/miniprogram/dev/reference/api/Page.html#onLoad-Object-query
